tests/errors/first_stage/operation/invalid_immediate/invalid_immediate.as
; invalid immediate operand
mov #2a, r1